5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1602_1446.log
== TEST (2019-03-20 19:33:43) 
-- CODE:
x = float(input("quantidades de litros comprados:"))
michael=x/3
print(round(michael,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:34:05) 
-- CODE:
x = float(input("quantidades de litros comprados:"))
michael=x/3
print(round(michael,3))
					
-- EXECUTION TIME:
0.183892
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:29:33) 
-- CODE:
x = float(input("quantidades de litros comprados:"))
michael=x/3
print(round(michael,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:30:22) 
-- CODE:
x = float(input("quantidades de litros comprados:"))
michael=x/3
print(round(michael,3))
					
-- EXECUTION TIME:
0.164018
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:41:22) 
-- CODE:
x =float(input("quantidade de litros comprados: "))
total =float(x/3)
print(round(total))
					
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:41:39) 
-- CODE:
x =float(input("quantidade de litros comprados: "))
total =float(x/3)
print(round(total))
					
-- EXECUTION TIME:
0.125058
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
7
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:42:39) 
-- CODE:
x =float(input("quantidade de litros comprados: "))
total =float(x/3)
print(round(total,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:42:46) 
-- CODE:
x =float(input("quantidade de litros comprados: "))
total =float(x/3)
print(round(total,3))
					
-- EXECUTION TIME:
0.143266
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:45:56) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(1/3)
print(round(total,3))
					
-- OUTPUT:
0.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:46:43) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:46:45) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:47:39) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
					
-- EXECUTION TIME:
0.11971
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:50:43) 
-- CODE:
x =float(input("quantos litros forom comprados: "))
total=float(x/3)
print(round(total,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:51:06) 
-- CODE:
x =float(input("quantos litros forom comprados: "))
total=float(x/3)
print(round(total,3))
					
-- EXECUTION TIME:
0.136964
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:58:01) 
-- CODE:
x =float(input("quantos litros forom comprados: "))
total =float(x/3)
print(round(total,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:58:10) 
-- CODE:
x =float(input("quantos litros forom comprados: "))
total =float(x/3)
print(round(total,3))
					
-- EXECUTION TIME:
0.169687
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:00:27) 
-- CODE:
x =float(input("quantos litros foram compradsos: "))
total =float(x/3)
print(round(total,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:00:38) 
-- CODE:
x =float(input("quantos litros foram compradsos: "))
total =float(x/3)
print(round(total,3))
					
-- EXECUTION TIME:
0.160933
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:17:09) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
					
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:17:20) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
					
-- EXECUTION TIME:
0.175033
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:59:15) 
-- CODE:
x 	float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- ERROR:
File "XXXX", line 1
    x 	float(input())
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:59:27) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:59:49) 
-- CODE:
x=float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.121579
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:16:46) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:16:56) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.195304
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:28:26) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total=float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:28:43) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total=float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.133815
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:00:58) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:14:06) 
-- CODE:
x = float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:14:38) 
-- CODE:
x = float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.159351
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 17:59:44) 
-- CODE:
x = float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:00:07) 
-- CODE:
x = float(input("quantos litros foram comprados: "))
total =float(x/3)*
print(round(total,3))
-- ERROR:
File "XXXX", line 2
    total =float(x/3)*
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:00:14) 
-- CODE:
x = float(input("quantos litros foram comprados: "))
total =float(x/3)*x
print(round(total,3))
-- OUTPUT:
16.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:00:24) 
-- CODE:
x = float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:00:32) 
-- CODE:
x = float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.123283
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 18:54:27) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 18:54:37) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.139039
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:22:53) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total=float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:23:09) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total=float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:23:18) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total=float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.199422
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:28:05) 
-- CODE:
x =float("quantos litros foram comprados: ")
total =float(x/3)
print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x =float("quantos litros foram comprados: ")
ValueError: could not convert string to float: 'quantos litros foram comprados: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:28:41) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:29:12) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:29:24) 
-- CODE:
x =float(input("quantos litros foram comprados: "))
total =float(x/3)
print(round(total,3))
-- EXECUTION TIME:
0.149334
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
